{
  "version": 4,
  "terraform_version": "0.12.6",
  "serial": 19,
  "lineage": "df702581-f479-f9c9-c621-6db72dd4a798",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-09e5e6f1ae3cd0bb7",
            "public_dns": "ec2-63-34-132-202.eu-west-1.compute.amazonaws.com",
            "public_ip": "63.34.132.202",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main-gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-00656988288520072",
            "owner_id": "939397960465",
            "tags": {
              "Name": "main"
            },
            "vpc_id": "vpc-02f3ca1ba0cecdb0b"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09e5e6f1ae3cd0bb7",
            "id": "nat-0ab88aafe47678025",
            "network_interface_id": "eni-0e402b54bc46cb3e9",
            "private_ip": "10.0.1.150",
            "public_ip": "63.34.132.202",
            "subnet_id": "subnet-011bfa8662a1dcc06"
          },
          "depends_on": [
            "aws_eip.nat",
            "aws_internet_gateway.main-gw",
            "aws_subnet.main-public-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main-private",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-06eaf4450967a0ad1",
            "owner_id": "939397960465",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-0ab88aafe47678025",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "main-private-1"
            },
            "vpc_id": "vpc-02f3ca1ba0cecdb0b"
          },
          "depends_on": [
            "aws_nat_gateway.nat-gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main-public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0d3a6f1f5a98573ab",
            "owner_id": "939397960465",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00656988288520072",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "main-public-1"
            },
            "vpc_id": "vpc-02f3ca1ba0cecdb0b"
          },
          "depends_on": [
            "aws_internet_gateway.main-gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-private-1-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c931d0359027c329",
            "route_table_id": "rtb-06eaf4450967a0ad1",
            "subnet_id": "subnet-05eb569405f84de1b"
          },
          "depends_on": [
            "aws_route_table.main-private",
            "aws_subnet.main-private-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-private-2-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b191e9da579e93ad",
            "route_table_id": "rtb-06eaf4450967a0ad1",
            "subnet_id": "subnet-08eed77b9dd5f6a7e"
          },
          "depends_on": [
            "aws_route_table.main-private",
            "aws_subnet.main-private-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-private-3-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0524be86037ae1d12",
            "route_table_id": "rtb-06eaf4450967a0ad1",
            "subnet_id": "subnet-0b5dc3b76d7f7ec64"
          },
          "depends_on": [
            "aws_route_table.main-private",
            "aws_subnet.main-private-3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-public-1-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bfd153bb32064791",
            "route_table_id": "rtb-0d3a6f1f5a98573ab",
            "subnet_id": "subnet-011bfa8662a1dcc06"
          },
          "depends_on": [
            "aws_route_table.main-public",
            "aws_subnet.main-public-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-public-2-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-008e4d7e73950a537",
            "route_table_id": "rtb-0d3a6f1f5a98573ab",
            "subnet_id": "subnet-0c6a5896500e91ab8"
          },
          "depends_on": [
            "aws_route_table.main-public",
            "aws_subnet.main-public-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-public-3-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04ea5ec3552588bb2",
            "route_table_id": "rtb-0d3a6f1f5a98573ab",
            "subnet_id": "subnet-0f373b369e694081a"
          },
          "depends_on": [
            "aws_route_table.main-public",
            "aws_subnet.main-public-3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-private-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:939397960465:subnet/subnet-05eb569405f84de1b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-05eb569405f84de1b",
            "map_public_ip_on_launch": false,
            "owner_id": "939397960465",
            "tags": {
              "Name": "main-private-1"
            },
            "vpc_id": "vpc-02f3ca1ba0cecdb0b"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-private-2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:939397960465:subnet/subnet-08eed77b9dd5f6a7e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-08eed77b9dd5f6a7e",
            "map_public_ip_on_launch": false,
            "owner_id": "939397960465",
            "tags": {
              "Name": "main-private-2"
            },
            "vpc_id": "vpc-02f3ca1ba0cecdb0b"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-private-3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:939397960465:subnet/subnet-0b5dc3b76d7f7ec64",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.6.0/24",
            "id": "subnet-0b5dc3b76d7f7ec64",
            "map_public_ip_on_launch": false,
            "owner_id": "939397960465",
            "tags": {
              "Name": "main-private-3"
            },
            "vpc_id": "vpc-02f3ca1ba0cecdb0b"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-public-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:939397960465:subnet/subnet-011bfa8662a1dcc06",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-011bfa8662a1dcc06",
            "map_public_ip_on_launch": true,
            "owner_id": "939397960465",
            "tags": {
              "Name": "main-public-1"
            },
            "vpc_id": "vpc-02f3ca1ba0cecdb0b"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-public-2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:939397960465:subnet/subnet-0c6a5896500e91ab8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0c6a5896500e91ab8",
            "map_public_ip_on_launch": true,
            "owner_id": "939397960465",
            "tags": {
              "Name": "main-public-2"
            },
            "vpc_id": "vpc-02f3ca1ba0cecdb0b"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-public-3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:939397960465:subnet/subnet-0f373b369e694081a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0f373b369e694081a",
            "map_public_ip_on_launch": true,
            "owner_id": "939397960465",
            "tags": {
              "Name": "main-public-3"
            },
            "vpc_id": "vpc-02f3ca1ba0cecdb0b"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:939397960465:vpc/vpc-02f3ca1ba0cecdb0b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0aca31516e0a1e186",
            "default_route_table_id": "rtb-08d9939fae08221f5",
            "default_security_group_id": "sg-0a26fd1a036657239",
            "dhcp_options_id": "dopt-726f2814",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-02f3ca1ba0cecdb0b",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-08d9939fae08221f5",
            "owner_id": "939397960465",
            "tags": {
              "Name": "main"
            }
          }
        }
      ]
    }
  ]
}